- Voltei a mecher no projeto e estou acertando alguns detalhes.

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Documents and Settings\\wellington.CESAC\\.netbeans\\7.1\\gfv3-1986107540.properties
+deploy.ant.properties.file=C:\\Users\\wellington\\AppData\\Roaming\\NetBeans\\7.2.1\\gfv31181327631.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Arquivos de programas/glassfish-3.1.1/glassfish/domains/domain1
-j2ee.server.home=C:/Arquivos de programas/glassfish-3.1.1/glassfish
-j2ee.server.instance=[C:\\Arquivos de programas\\glassfish-3.1.1\\glassfish]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Arquivos de programas/glassfish-3.1.1
-user.properties.file=C:\\Documents and Settings\\wellington.CESAC\\.netbeans\\7.1\\build.properties
+j2ee.server.domain=C:/Users/wellington/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/wellington/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\wellington\\GlassFish_Server\\glassfish;C:\\Users\\wellington\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/wellington/GlassFish_Server
+user.properties.file=C:\\Users\\wellington\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
