--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -9,6 +9,16 @@
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <filter>
+        <filter-name>HibernateFilter</filter-name>
+        <filter-class>webFilter.HibernateFilter</filter-class>
+    </filter>
+    
+    <filter-mapping>
+        <filter-name>HibernateFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
